// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`Client.discussions addCategory 1`] = `
{
  "agent": "discussions",
  "args": [
    0,
    "ipfs://bafkreig6w7uziilucxw7vfs63jnavri4cdfl7b7r3k4fafloibxtsftnny",
    "0xa89aa3531b4c7b310064610ce4530d0a1aecf80f5b1c97b2c65a81883c4e5b6f049320ac641d9133ed00ad818184cbcce6db88989cc9553f2bf0b446fa92e3911c",
  ],
  "method": "add_category",
}
`;

exports[`Client.discussions editCategory 1`] = `
{
  "agent": "discussions",
  "args": [
    1,
    "ipfs://bafkreig5a634jxenylwhpknv5ccwqotdzmhgbqieyglbdyxffcbgog6xza",
    "0xc080db2b51cd722462e19275166e2408456eab1d475036202bda682fbebc2fba4c89b85aad101e54aae9a0682c97321d83159d47ba674a947b2e4db6d5322ff11c",
  ],
  "method": "edit_category",
}
`;

exports[`Client.discussions addTopic 1`] = `
{
  "agent": "discussions",
  "args": [
    "0xd96d9e15F6fb8f493784640f1009FbB1C4f1D2D1",
    0,
    0,
    "ipfs://bafkreihrrkavdwctri5nutfji3g52ksiq2uubnrflihdpyavzzkvmiebg4",
    "0x02a5252cf69f7160d52d02918fcd439d656b4e59c1fd8a0f8739accde839bd7a4b5c7c2d1d3b5b1f6e2d70820bdd7ce7dc03f82dda066345d7612d97248647991c",
  ],
  "method": "add_topic",
}
`;

exports[`Client.discussions editTopic 1`] = `
{
  "agent": "discussions",
  "args": [
    1,
    "ipfs://bafkreian3o5sqrxmynunhsfqugwyezlzkkdk7cr2nj3h2a5lm5msfwvbzi",
    "0x8eabb4d88e759d3dd246325a6ed95d80902f46ddbedf538f2fbc45b98415b956006016f16bca634807b2f4133e34c2db533e8fedfe8f8090bcc9fbb6f91233ef1b",
  ],
  "method": "edit_topic",
}
`;

exports[`Client.discussions pinTopic 1`] = `
{
  "agent": "discussions",
  "args": [
    1,
    "0x20507262885f6a9f86a1456e1550db90eca63f1d9391b33f0ba84be08124bf536982c475c19b58fe8b2e1a4e009b5d58d11d1d91ce4ddda930ee41fb9d0439071c",
  ],
  "method": "pin_topic",
}
`;

exports[`Client.discussions vote 1`] = `
{
  "agent": "discussions",
  "args": [
    "0xd96d9e15F6fb8f493784640f1009FbB1C4f1D2D1",
    1,
    1,
    "0x66af0b73ba17fbdcc94df74147f21b6e14c7f0df28224c4a1a4a29984403b400249644919f577538144c6eea48d147f066f46362c1c53bc2f9f3fe28311c6bc01c",
  ],
  "method": "vote",
}
`;
